Inherit width was not working. Okay!  Making progress in developing User Dashboard from where user will be able to view and update all information.  Render in ui:include does not work.  Rather wrapped with c:if test produced desired result.  Netbeans/Hibernate very bugging.  For example, refused to recognize a field.  Also problems with using onclick first then action with h:commandLink.

--- a/web/resources/css/stylesheet.css
+++ b/web/resources/css/stylesheet.css
@@ -106,7 +106,7 @@ div.contact_information {
     display:block;
     background-color: #ffffff;
     color: #000033;
-    width:inherit;
+    width:100%;
     padding: inherit;
     align-content: left;
 
